# icewm-extra-themes

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README.md  README.md.in  RELEASE.md  configure.ac  configure.sh
data/: Makefile.am
data/18k/: btn-template.xpm  btn-templateI.xpm  closeA.xpm  closeI.xpm  default.theme  depthA.xpm  depthI.xpm  hideA.xpm  hideI.xpm  maximizeA.xpm  maximizeI.xpm  menuButtonI.xpm  minimizeA.xpm  minimizeI.xpm  restoreA.xpm  restoreI.xpm  rolldownA.xpm  rolldownI.xpm  rollupA.xpm  rollupI.xpm  titleAB.xpm  titleAR.xpm  titleIB.xpm  titleIR.xpm
data/708090/: 2Buttons.theme  closeA.xpm  closeI.xpm  default.theme  frameABL.xpm  frameABR.xpm  frameIBL.xpm  frameIBR.xpm  maximizeA.xpm  maximizeI.xpm  minimizeA.xpm  minimizeI.xpm  restoreA.xpm  restoreI.xpm  rolldownA.xpm  rolldownI.xpm  rollupA.xpm  rollupI.xpm  titleAB.xpm  titleAL.xpm  titleAM.xpm  titleAP.xpm  titleAR.xpm  titleAT.xpm  titleIB.xpm  titleIL.xpm  titleIM.xpm  titleIP.xpm  titleIR.xpm  titleIT.xpm
data/Aalglatt/: closeA.xpm  closeI.xpm  default.theme  depthA.xpm  depthI.xpm  dframeAB.xpm  dframeABL.xpm  dframeABR.xpm  dframeAL.xpm  dframeAR.xpm  dframeAT.xpm  dframeATL.xpm  dframeATR.xpm  dframeIB.xpm  dframeIBL.xpm  dframeIBR.xpm  dframeIL.xpm  dframeIR.xpm  dframeIT.xpm  dframeITL.xpm  dframeITR.xpm  frameAB.xpm  frameABL.xpm  frameABR.xpm  frameAL.xpm  frameAR.xpm  frameAT.xpm  frameATL.xpm  frameATR.xpm  frameIB.xpm  frameIBL.xpm  frameIBR.xpm  frameIL.xpm  frameIR.xpm  frameIT.xpm  frameITL.xpm  frameITR.xpm  hideA.xpm  hideI.xpm  maximizeA.xpm  (+12 more)
data/Anon/: closeA.xpm  closeI.xpm  color.txt  default.theme  dframeAB.xpm  dframeABL.xpm  dframeABR.xpm  dframeAL.xpm  dframeAR.xpm  dframeAT.xpm  dframeATL.xpm  dframeATR.xpm  dframeIT.xpm  frameATL.xpm  frameATR.xpm  menuButtonA.xpm  menuButtonI.xpm  restoreA.xpm  restoreI.xpm  rolldownA.xpm  rolldownI.xpm  rollupA.xpm  rollupI.xpm  titleAB.xpm  titleIB.xpm  titlebar.xcf
data/Area51/: area51.xpm  closeA.xpm  closeI.xpm  default.theme  maximizeA.xpm  maximizeI.xpm  minimizeA.xpm  minimizeI.xpm  titleAB.xpm  titleAM.xpm  titleAP.xpm  titleAS.xpm  titleAT.xpm  titleIB.xpm  titleIM.xpm  titleIP.xpm  titleIS.xpm  titleIT.xpm
data/CoolSteel/: closeA.xpm  closeI.xpm  default.theme  frameAB.xpm  frameABL.xpm  frameABR.xpm  frameAL.xpm  frameAR.xpm  frameAT.xpm  frameATL.xpm  frameATR.xpm  frameIB.xpm  frameIBL.xpm  frameIBR.xpm  frameIL.xpm  frameIR.xpm  frameIT.xpm  frameITL.xpm  frameITR.xpm  listbg.xpm  maximizeA.xpm  maximizeI.xpm  menuButtonA.xpm  menuButtonI.xpm  menubg.xpm  minimizeA.xpm  minimizeI.xpm  restoreA.xpm  restoreI.xpm  titleAB.xpm  titleAL.xpm  titleAM.xpm  titleAP.xpm  titleAQ.xpm  titleAS.xpm  titleAT.xpm  titleIB.xpm  titleIL.xpm  titleIM.xpm  titleIP.xpm  (+3 more)
data/Crux-Teal/: Close Button Left.theme  More Title Bar Buttons.theme  closeA.xpm  closeI.xpm  default.theme  depthA.xpm  depthI.xpm  hideA.xpm  hideI.xpm  maximizeA.xpm  maximizeI.xpm  menuButtonA.xpm  menuButtonI.xpm  minimizeA.xpm  minimizeI.xpm  restoreA.xpm  restoreI.xpm  rolldownA.xpm  rolldownI.xpm  rollupA.xpm  rollupI.xpm  titleAB.xpm  titleAR.xpm  titleAS.xpm  titleAT.xpm  titleIB.xpm  titleIL.xpm  titleIM.xpm  titleIP.xpm  titleIR.xpm  titleIS.xpm  titleIT.xpm
data/ElbergBlue/: Wallpaper.theme  closeA.xpm  closeP.xpm  maximizeA.xpm  maximizeP.xpm  menuButtonA.xpm  menuButtonI.xpm  menuButtonP.xpm  menusel.xpm  minimizeA.xpm  minimizeP.xpm  restoreA.xpm  restoreI.xpm  restoreP.xpm  titleAM.xpm  titleAP.xpm  titleAS.xpm  titleAT.xpm  titleIM.xpm  titleIP.xpm  titleIS.xpm
data/ElbergGreen/: _frameAT.xpm  _frameIT.xpm  closeA.xpm  closeI.xpm  convert.sh  default.theme  maximizeA.xpm  menuButtonA.xpm  menusel.xpm  minimizeA.xpm  minimizeI.xpm  restoreA.xpm  restoreI.xpm  restoreP.xpm  switchbg.xpm
data/ElbergRed/: Wallpaper.theme  closeA.xpm  default.theme  maximizeA.xpm  maximizeI.xpm  menuButtonA.xpm  menubg.xpm  menusel.xpm  minimizeA.xpm  restoreA.xpm  titleAM.xpm  titleAP.xpm  titleAT.xpm  titleIT.xpm
data/FrostyG/: All buttons.theme  Windows buttons.theme  buttonA.xpm  closeA.xpm  closeI.xpm  default.theme  dialogbg.xpm  maximizeA.xpm  maximizeI.xpm  menuButtonA.xpm  menuButtonI.xpm  menubg.xpm  menusel.xpm  minimizeA.xpm  minimizeI.xpm  restoreA.xpm  restoreI.xpm  rolldownA.xpm  rolldownI.xpm  rollupA.xpm  rollupI.xpm  titleAB.xpm  titleAL.xpm  titleAM.xpm  titleAP.xpm  titleAR.xpm  titleAT.xpm  titleIB.xpm  titleIL.xpm  titleIM.xpm  titleIP.xpm  titleIR.xpm  titleIS.xpm  titleIT.xpm
data/GlamICE/: closeA.xpm  closeI.xpm  default.theme  frameAB.xpm  frameABL.xpm  frameABR.xpm  frameAL.xpm  frameAR.xpm  frameAT.xpm  frameATL.xpm  frameATR.xpm  frameIB.xpm  frameIBL.xpm  frameIBR.xpm  frameIL.xpm  frameIR.xpm  frameIT.xpm  frameITL.xpm  frameITR.xpm  maximizeA.xpm  maximizeI.xpm  menuButtonA.xpm  menuButtonI.xpm  menubg.xpm  minimizeA.xpm  minimizeI.xpm  restoreA.xpm  restoreI.xpm  themed.Xresources  titleAB.xpm  titleAL.xpm  titleAM.xpm  titleAR.xpm  titleAT.xpm  titleIB.xpm  titleIL.xpm  titleIM.xpm  titleIR.xpm  titleIT.xpm
data/IceBlueCurve/: closeA.xpm  closeI.xpm  default.theme  dframeAB.xpm  dframeABL.xpm  dframeABR.xpm  dframeAL.xpm  dframeAR.xpm  dframeAT.xpm  dframeATL.xpm  dframeATR.xpm  dframeIB.xpm  dframeIBL.xpm  dframeIBR.xpm  dframeIL.xpm  dframeIR.xpm  dframeIT.xpm  dframeITL.xpm  dframeITR.xpm  frameAB.xpm  frameABL.xpm  frameABR.xpm  frameAL.xpm  frameAR.xpm  frameAT.xpm  frameATL.xpm  frameATR.xpm  frameIB.xpm  frameIBL.xpm  frameIBR.xpm  frameIL.xpm  frameIR.xpm  frameIT.xpm  frameITL.xpm  frameITR.xpm  maximizeA.xpm  maximizeI.xpm  menuButtonA.xpm  menuButtonI.xpm  minimizeA.xpm  (+17 more)
data/IceBlueOkayish/: closeA.xpm  closeI.xpm  default.theme  dframeAB.xpm  dframeABL.xpm  dframeABR.xpm  dframeAL.xpm  dframeAR.xpm  dframeAT.xpm  dframeATL.xpm  dframeATR.xpm  dframeIB.xpm  dframeIBL.xpm  dframeIBR.xpm  dframeIL.xpm  dframeIR.xpm  dframeIT.xpm  dframeITL.xpm  dframeITR.xpm  frameAB.xpm  frameABL.xpm  frameABR.xpm  frameAL.xpm  frameAR.xpm  frameATL.xpm  frameATR.xpm  frameIB.xpm  frameIBL.xpm  frameIBR.xpm  (+27 more)
(+2374 files in other folders)
